<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013-2014 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">CyanogenMod Account</string>
    <string name="product_name" translatable="false">cyanogenmod</string>
    <string name="account_name" translatable="false">CyanogenMod</string>

    <string name="next">Next</string>
    <string name="continue_label">Continue</string>
    <string name="prev">Previous</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="login">Login</string>
    <string name="ok">OK</string>
    <string name="existing">Existing</string>
    <string name="new_account">New</string>
    <string name="skip_anyway">Skip anyway</string>
    <string name="dont_skip">Don\'t skip</string>
    <string name="go_back">Go back</string>

    <string name="setup_complete">Setup is complete</string>
    <string name="setup_complete_summary" product="tablet">Congratulations! Your tablet is ready to rumble.</string>
    <string name="setup_complete_summary" product="default">Congratulations! Your phone is ready to rumble.</string>
    <string name="setup_welcome">Welcome to CyanogenMod</string>
    <string name="setup_welcome_summary" product="tablet">To get started setting up your tablet, select your language and continue.</string>
    <string name="setup_welcome_summary" product="default">To get started setting up your phone, select your language and continue.</string>
    <string name="setup_cmaccount">Set up your CyanogenMod account</string>
    <string name="setup_sim_missing">Insert SIM card</string>
    <string name="setup_google_account">Google account</string>
    <string name="setup_location">Location settings</string>
    <string name="setup_datetime">Date &amp; time settings</string>
    <string name="setup_current_date">Current date</string>
    <string name="setup_current_time">Current time</string>
    <string name="setup_msg_no_network">WARNING: You won\'t be able to set up your accounts</string>
    <string name="setup_warning_skip_wifi" product="tablet">WARNING: You may incur extra carrier data charges.\n\nTablet setup can require significant network activity.</string>
    <string name="setup_warning_skip_wifi" product="default">WARNING: You may incur extra carrier data charges.\n\nPhone setup can require significant network activity.</string>
    <string name="setup_personalization">Personalize</string>
    <string name="setup_finalizing">Finalizing setup\u2026</string>

    <string name="cmaccount_setup_create_title">Create a CyanogenMod account</string>
    <string name="cmaccount_setup_login_title">Log in to your CyanogenMod account</string>
    <string name="cmaccount_setup_email_label">Email</string>
    <string name="cmaccount_setup_email_unavailable_label">Email already registered</string>
    <string name="cmaccount_setup_email_invalid_label">Not a valid email address</string>
    <string name="cmaccount_setup_password_label">Password</string>
    <string name="cmaccount_setup_password_create_label">Password (min. 8 chars)</string>
    <string name="cmaccount_setup_password_mismatch_label">Passwords don\'t match!</string>
    <string name="cmaccount_setup_password_invalid_label">Password must be at least 8 characters!</string>
    <string name="cmaccount_setup_confirm_password_label">Confirm password</string>
    <string name="cmaccount_setup_tos_label">I agree to the %1$sterms%2$s of service</string>
    <string name="cmaccount_add_title">Add a CyanogenMod account</string>
    <string name="cmaccount_add_create_label">A CyanogenMod account provides access to value-added services and functionality for your mobile device running CyanogenMod.\n\nDo you want to add an existing account or create a new one?</string>
    <string name="cmaccount_learn_more">Learn more\u2026</string>
    <string name="cmaccount_learn_more_alt">Learn more</string>

    <string name="cmaccount_update_required_title">Update required</string>
    <string name="cmaccount_update_required_text">This version of CyanogenMod Account may be incompatible. Please update to the latest version of CyanogenMod to ensure compatibility.</string>
    <string name="cmaccount_update_required_short">This version may be incompatible.</string>
    <string name="cmaccount_checking_for_updates">Checking for updates.</string>

    <string name="cmaccount_password_changed_title">Password changed</string>
    <string name="cmaccount_password_changed_message">Please login to your CyanogenMod account</string>

    <string name="cmaccount_login_message">Logging in to CyanogenMod</string>
    <string name="cmaccount_creating_profile_message">Creating your CyanogenMod profile</string>

    <string name="cmaccount_login_error_title">Login failed</string>
    <string name="cmaccount_login_error_message">Invalid email or password.</string>
    <string name="cmaccount_server_error_title">Server error</string>
    <string name="cmaccount_create_account_error_title">Error creating account</string>
    <string name="cmaccount_server_error_message">An error has occurred while communicating with the server. Please try again later.</string>

    <string name="cmaccount_error_multiple_accounts">Only one CyanogenMod account is allowed per device</string>

    <string name="sim_missing_summary" product="tablet">You need to refer to the SIM card instructions that came with your tablet.</string>
    <string name="sim_missing_summary" product="default">You need to refer to the SIM card instructions that came with your phone.</string>
    <string name="google_account_summary">Do you want to set up a Google account?</string>
    <string name="btn_google_account">Set up Google account</string>

    <string name="whisperpush_title">Enable secure SMS</string>
    <string name="whisperpush_summary">SMS conversations with others using secure SMS on CyanogenMod will be automatically encrypted.</string>
    <string name="apply_default_theme_title">Use CyanogenMod’s theme</string>
    <string name="use_nav_keys">Use on-screen keys</string>

    <string name="location_access_title">Access to my location</string>
    <string name="location_access_summary">Allow apps that have asked your permission to use your location information</string>
    <string name="location_gps">GPS satellites</string>
    <string name="location_street_level" product="tablet">Allow apps to use GPS on your tablet to pinpoint your location</string>
    <string name="location_street_level" product="default">Allow apps to use GPS on your phone to pinpoint your location</string>
    <string name="location_network_based">Wi-Fi &amp; mobile network location</string>
    <string name="location_neighborhood_level">Allow apps to use Google\'s location service to estimate your location faster. Anonymous location data will be collected and sent to Google.</string>
    <string name="update_icon_pack_available">An updated icon pack is available</string>
    <string name="apply_icon_pack">Apply</string>

    <string name="setup_mobile_data">Allow mobile data</string>
    <string name="enable_mobile_data_summary">Turning on mobile data during the setup process may be subject to data charges.</string>
    <string name="enable_mobile_off">No</string>
    <string name="enable_mobile_on">Yes</string>

    <string name="setup_unlock">Unlock</string>
    <string name="setup_device_locked">This device has been locked by the user.</string>
    <string name="setup_require_cyanogen_label">Require your Cyanogen OS account password in order to use your device even after a factory reset.</string>
    <string name="setup_device_locked_instructions"><i>To turn this feature off/on, please go to Settings > Security</i></string>
    <string name="setup_warning_skip_anyway">Without a Cyanogen OS Account, you won\'t be able to:\n\nCustomize your phone with new icons, wallpapers and more in the Themes app\n\nLocate or remotely erase your phone if it\'s lost</string>
</resources>
