<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
            android:title="@string/location_access_title"
            android:summary="@string/location_access_summary"
            android:key="location_toggle"
            android:defaultValue="false"/>

    <PreferenceCategory
            android:key="location_sources"
            android:title="@string/location_sources_heading" />

    <CheckBoxPreference
            android:key="location_gps"
            android:title="@string/location_gps"
            android:summary="@string/location_street_level"
            android:dependency="location_toggle"
            android:persistent="false" />

    <CheckBoxPreference
            android:key="location_network"
            android:title="@string/location_network_based"
            android:summary="@string/location_neighborhood_level"
            android:dependency="location_toggle"
            android:persistent="false" />

</PreferenceScreen>
