<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/SetupWizardCard">

    <LinearLayout
        android:orientation="vertical"
        style="@style/SetupWizardPageContent">

        <TextView
            style="@style/SetupWizardPageTitle"
            android:text="@string/cmaccount_add_title" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View style="@style/SetupWizardDivider"/>

                <TextView
                    style="@style/SetupWizardPageSummary"
                    android:text="@string/cmaccount_add_create_label" />

                <Button
                    android:id="@+id/learn_more_button"
                    style="@style/SetupWizardPageLink"
                    android:text="@string/cmaccount_learn_more" />

                <View
                    android:id="@+id/divider"
                    android:background="?android:attr/dividerHorizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_height="1dp"
                    android:layout_width="match_parent" />

                <Button
                    android:id="@+id/existing_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/existing"
                    style="@style/ActionButton" />

                <Button
                    android:id="@+id/new_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/new_account"
                    style="@style/ActionButton" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>
