<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        style="@style/RootLayout">

    <LinearLayout
        android:orientation="vertical"
        style="@style/SetupWizardCard">

        <TextView style="@style/SetupWizardPageTitle" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View style="@style/SetupWizardDivider"/>

                <EditText
                    android:id="@+id/cmaccount_email"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:contentDescription="@string/cmaccount_setup_email_label"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:hint="@string/cmaccount_setup_email_label"
                    style="@style/EditText"/>

                <EditText
                    android:id="@+id/cmaccount_password"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:contentDescription="@string/cmaccount_setup_password_label"
                    android:inputType="textPassword"
                    android:hint="@string/cmaccount_setup_password_label"
                    style="@style/EditText" />

                <EditText
                    android:id="@+id/cmaccount_confirm_password"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:contentDescription="@string/cmaccount_setup_confirm_password_label"
                    android:inputType="textPassword"
                    android:hint="@string/cmaccount_setup_confirm_password_label"
                    style="@style/EditText" />

                <CheckBox
                    android:id="@+id/cmaccount_tos"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    style="@style/EditText" />

                <LinearLayout
                    android:id="@+id/back_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/cancel_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="5dp"
                        android:layout_gravity="left"
                        android:text="@string/cancel"
                        style="@style/ActionButton" />

                    <View
                        android:layout_height="1px"
                        android:layout_width="match_parent"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/submit_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="5dp"
                        android:layout_gravity="right"
                        android:text="@string/login"
                        style="@style/ActionButton" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>
