<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/SetupWizardCard">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/SetupWizardPageContent">

        <TextView style="@style/SetupWizardPageTitle" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View style="@style/SetupWizardDivider"/>

                <TextView
                    android:id="@+id/mobile_data_summary"
                    style="@style/SetupWizardPageSummary"
                    android:text="@string/enable_mobile_data_summary" />

                <View style="@style/SetupWizardDivider"/>

                <LinearLayout
                    android:id="@+id/data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?android:attr/listPreferredItemHeight"
                    android:gravity="center_vertical"
                    android:paddingEnd="?android:attr/scrollbarSize"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="6dip"
                        android:layout_marginTop="6dip"
                        android:layout_marginBottom="6dip"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/enable_data_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/LocationTextTitle"
                            android:textColor="?android:attr/textColorSecondary"
                            android:text="@string/setup_mobile_data"
                            android:maxLines="4" />

                    </RelativeLayout>

                    <Switch
                        android:id="@+id/data_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:duplicateParentState="true"
                        android:clickable="false"
                        android:textOff="@string/enable_mobile_off"
                        android:textOn="@string/enable_mobile_on"/>
                </LinearLayout>

                <View style="@style/SetupWizardDivider"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>
